--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>API Calls</title>
+    <title>WebTech Lab S2 API CRUD</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -51,7 +51,7 @@
       <!--------------------------- Heading --------------------------->
 
       <div class="heading">
-        <h1>API Management</h1>
+        <h1>CRUD API</h1>
       </div>
 
       <!--------------------------- Heading --------------------------->
@@ -60,6 +60,15 @@
         <!--------------------------- Buttons --------------------------->
 
         <button id="btn" class="btn btn-primary">Load Data</button>
+        <button
+          type="button"
+          id="btnget1"
+          class="btn btn-primary"
+          data-toggle="modal"
+          data-target="#get1Modal"
+        >
+          Get 1 Result
+        </button>
 
         <!-------------------- Right Buttons Group --------------------->
 
@@ -269,6 +278,65 @@
         </div>
 
         <!--------------------------- Modal 2 --------------------------->
+
+        <!--------------------------- Modal 3 Get 1 Data --------------------------->
+
+        <div
+          class="modal fade"
+          id="get1Modal"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="get1ModalTitle"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="get1ModalTitle">
+                  Get 1 Result by ID
+                </h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <label for="idInput">Type ID:</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="idInput"
+                    id="idInput"
+                    aria-describedby="helpId"
+                    placeholder="100"
+                  />
+                  <small id="helpId" class="form-text text-muted"
+                    >Type Single ID like ( 100 )</small
+                  >
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button type="button" id="btnfetch1" class="btn btn-primary">
+                  Fetch Result
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--------------------------- Modal 3 Get 1 Data --------------------------->
       </div>
     </div>
   </body>
